--- a/gradle.properties
+++ b/gradle.properties
@@ -5,15 +5,15 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these at https://fabricmc.net/develop/ and
 # https://modrinth.com/mod/fabric-api/versions
-minecraft_version=1.21
-yarn_mappings=1.21+build.9
-loader_version=0.15.11
+minecraft_version=1.21.1-rc1
+yarn_mappings=1.21.1-rc1+build.2
+loader_version=0.16.0
 
 # Fabric API
-fabric_version=0.100.6+1.21
+fabric_version=0.101.2+1.21.1
 
 # Mod Properties
-mod_version = v7.44-MC1.21
+mod_version = v7.44-MC1.21.1-rc1
 maven_group = net.wurstclient
 archives_base_name = Wurst-Client
 
