--- a/gradle.properties
+++ b/gradle.properties
@@ -5,15 +5,15 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these at https://fabricmc.net/develop/ and
 # https://modrinth.com/mod/fabric-api/versions
-minecraft_version=1.21.1
-yarn_mappings=1.21.1+build.1
-loader_version=0.16.0
+minecraft_version=24w33a
+yarn_mappings=24w33a+build.20
+loader_version=0.16.2
 
 # Fabric API
-fabric_version=0.102.0+1.21.1
+fabric_version=0.102.2+1.21.2
 
 # Mod Properties
-mod_version = v7.45-MC1.21.1
+mod_version = v7.45-MC24w33a
 maven_group = net.wurstclient
 archives_base_name = Wurst-Client
 
