--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ loader_version=0.16.5
 fabric_version=0.104.0+1.21.1
 
 # Mod Properties
-mod_version = v7.46pre3-MC1.21.1
+mod_version = v7.46-MC1.21.1
 maven_group = net.wurstclient
 archives_base_name = Wurst-Client
 
