--- a/gradle.properties
+++ b/gradle.properties
@@ -5,15 +5,15 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these at https://fabricmc.net/develop/ and
 # https://modrinth.com/mod/fabric-api/versions
-minecraft_version=24w40a
-yarn_mappings=24w40a+build.3
+minecraft_version=1.21.2-pre1
+yarn_mappings=1.21.2-pre1+build.1
 loader_version=0.16.5
 
 # Fabric API
-fabric_version=0.105.2+1.21.2
+fabric_version=0.105.3+1.21.2
 
 # Mod Properties
-mod_version = v7.46-MC24w40a
+mod_version = v7.46-MC1.21.2-pre1
 maven_group = net.wurstclient
 archives_base_name = Wurst-Client
 
