--- a/gradle.properties
+++ b/gradle.properties
@@ -5,15 +5,15 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these at https://fabricmc.net/develop/ and
 # https://modrinth.com/mod/fabric-api/versions
-minecraft_version=1.21.2-pre5
-yarn_mappings=1.21.2-pre5+build.1
+minecraft_version=1.21.2-rc1
+yarn_mappings=1.21.2-rc1+build.1
 loader_version=0.16.7
 
 # Fabric API
 fabric_version=0.106.0+1.21.2
 
 # Mod Properties
-mod_version = v7.46.1-MC1.21.2-pre5
+mod_version = v7.46.1-MC1.21.2-rc1
 maven_group = net.wurstclient
 archives_base_name = Wurst-Client
 
