Add automated end-to-end testing

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -58,3 +58,15 @@ jobs:
         files: |
           ./build/libs/*.jar
       continue-on-error: true
+
+    - name: Run the mod and take screenshots
+      uses: modmuss50/xvfb-action@v1
+      with:
+        run: ./gradlew runEndToEndTest --stacktrace --warning-mode=fail
+
+    - name: Upload test screenshots
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: Test Screenshots
+        path: run/screenshots
