[Wurst-Bot] Update to 24w44a

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,15 +5,15 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these at https://fabricmc.net/develop/ and
 # https://modrinth.com/mod/fabric-api/versions
-minecraft_version=1.21.3
-yarn_mappings=1.21.3+build.2
+minecraft_version=24w44a
+yarn_mappings=24w44a+build.1
 loader_version=0.16.9
 
 # Fabric API
-fabric_version=0.107.0+1.21.3
+fabric_version=0.107.0+1.21.4
 
 # Mod Properties
-mod_version = v7.46.2-MC1.21.3
+mod_version = v7.46.2-MC24w44a
 maven_group = net.wurstclient
 archives_base_name = Wurst-Client
 
