--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,20 +3,20 @@ name: Java CI with Gradle
 on:
   push:
     paths:
-      - '**.java'
-      - '**.json'
-      - 'gradle**'
-      - 'build.gradle'
+      - "**.java"
+      - "**.json"
+      - "gradle**"
+      - "build.gradle"
   pull_request:
     paths:
-      - '**.java'
-      - '**.json'
-      - 'gradle**'
-      - 'build.gradle'
-  # Makes it possible to run this workflow manually from the Actions tab
+      - "**.java"
+      - "**.json"
+      - "gradle**"
+      - "build.gradle"
   workflow_dispatch:
 
 permissions:
+  # Required for Gradle dependency submission
   contents: write
 
 jobs:
@@ -30,8 +30,8 @@ jobs:
     - name: Set up Java 21
       uses: actions/setup-java@v4
       with:
-        java-version: '21'
-        distribution: 'microsoft'
+        java-version: "21"
+        distribution: "microsoft"
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
