--- a/.github/workflows/jsonsyntax.yml
+++ b/.github/workflows/jsonsyntax.yml
@@ -3,17 +3,19 @@ name: JSON syntax
 on:
   push:
     paths:
-      - '**.json'
+      - "**.json"
   pull_request:
     paths:
-      - '**.json'
+      - "**.json"
 
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Check JSON syntax
         uses: limitusus/json-syntax-check@v2
         with:
