--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,4 +1,5 @@
-name: "Close stale issues and pull requests"
+name: Close stale issues and pull requests
+
 on:
   schedule:
     - cron: "30 1 * * 1-5"
@@ -10,6 +11,7 @@ permissions:
 jobs:
   stale:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/stale@v9
         with:
