Actually fix VT API key check
The `github.event_name == 'push'` part was only there because pull requests don't have access to secrets. This should now be redundant as we're checking for the existence of that secret directly.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -51,7 +51,7 @@ jobs:
       run: ./gradlew build --stacktrace --warning-mode=fail
 
     - name: Upload to VirusTotal for analysis
-      if: ${{ github.event_name == 'push' && github.secrets.VIRUSTOTAL_API_KEY != '' }}
+      if: ${{ github.secrets.VIRUSTOTAL_API_KEY }}
       uses: crazy-max/ghaction-virustotal@v4
       with:
         vt_api_key: ${{ secrets.VIRUSTOTAL_API_KEY }}
