--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,8 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      VIRUSTOTAL_API_KEY: ${{ secrets.VIRUSTOTAL_API_KEY }}
 
     steps:
     - name: Checkout repository
@@ -51,10 +53,10 @@ jobs:
       run: ./gradlew build --stacktrace --warning-mode=fail
 
     - name: Upload to VirusTotal for analysis
-      if: ${{ github.secrets.VIRUSTOTAL_API_KEY }}
+      if: ${{ env.VIRUSTOTAL_API_KEY }}
       uses: crazy-max/ghaction-virustotal@v4
       with:
-        vt_api_key: ${{ secrets.VIRUSTOTAL_API_KEY }}
+        vt_api_key: ${{ env.VIRUSTOTAL_API_KEY }}
         vt_monitor: true
         monitor_path: /Wurst7
         files: |
