--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,6 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       VIRUSTOTAL_API_KEY: ${{ secrets.VIRUSTOTAL_API_KEY }}
+      IMGUR_CLIENT_ID: ${{ secrets.IMGUR_CLIENT_ID }}
     steps:
 
     - name: Checkout repository
@@ -75,9 +76,46 @@ jobs:
       with:
         run: ./gradlew runEndToEndTest --stacktrace --warning-mode=fail
 
-    - name: Upload test screenshots
+    # Needed because the screenshot gallery won't be created on pull requests.
+    # Also useful if Imgur uploads fail.
+    - name: Upload Test Screenshots.zip artifact
       uses: actions/upload-artifact@v4
       if: always()
       with:
         name: Test Screenshots
         path: run/screenshots
+
+    - name: Create test screenshot gallery
+      if: always() && ${{ env.IMGUR_CLIENT_ID }}
+      shell: bash
+      run: |
+        echo "<details>" >> $GITHUB_STEP_SUMMARY
+        echo "<summary>📸 Test Screenshots</summary>" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+
+        for img in run/screenshots/*.png; do
+          if [ -f "$img" ]; then
+            filename=$(basename "$img")
+            name_without_ext="${filename%.*}"
+
+            # Upload to Imgur
+            response=$(curl -s -X POST \
+              -H "Authorization: Client-ID $IMGUR_CLIENT_ID" \
+              -F "image=@$img" \
+              https://api.imgur.com/3/image)
+
+            # Extract the URL from the response
+            url=$(echo $response | grep -o '"link":"[^"]*"' | cut -d'"' -f4)
+
+            if [ ! -z "$url" ]; then
+              # Convert underscores to spaces and capitalize first letter of each word
+              title=$(echo "$name_without_ext" | tr '_' ' ' | awk '{for(i=1;i<=NF;i++)sub(/./,toupper(substr($i,1,1)),$i)}1')
+              echo "### $title" >> $GITHUB_STEP_SUMMARY
+              echo "![${name_without_ext}]($url)" >> $GITHUB_STEP_SUMMARY
+              echo "" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "Failed to upload $filename" >> $GITHUB_STEP_SUMMARY
+            fi
+          fi
+        done
+        echo "</details>" >> $GITHUB_STEP_SUMMARY
