Update GHA workflows

--- a/.github/workflows/dependency_graph.yml
+++ b/.github/workflows/dependency_graph.yml
@@ -2,6 +2,11 @@ name: Update Gradle Dependency Graph
 
 on:
   push:
+    branches:
+      # Submitting dependency graph reports on non-default branches does nothing
+      - "master"
+    tags-ignore:
+      - "**"
     paths:
       - "gradle**"
       - "*.gradle"
