--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,9 +25,12 @@ jobs:
     env:
       WI_BACKUPS_API_KEY: ${{ secrets.WI_BACKUPS_API_KEY }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
     steps:
+
       - uses: actions/checkout@v4
+        with:
+          # Include all tags in case the new tag already exists.
+          fetch-tags: true
 
       - name: Set up Java 21
         uses: actions/setup-java@v4
