--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,11 @@ on:
         required: true
         type: boolean
         default: true
+      update_website:
+        description: "Update WurstClient.net post (only works if there already is one)"
+        required: true
+        type: boolean
+        default: false
 
 jobs:
   publish:
@@ -68,3 +73,18 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.OLD_MCX_PUBLISH_TOKEN }}
         run: ./gradlew github --stacktrace
+
+      - name: Trigger website update
+        if: ${{ inputs.update_website }}
+        env:
+          GH_TOKEN: ${{ secrets.WURSTCLIENT_NET_PUBLISH_TOKEN }}
+        run: |
+          MOD_VERSION=$(grep "mod_version" gradle.properties | cut -d'=' -f2 | tr -d ' ')
+          WURST_VERSION=$(echo $MOD_VERSION | sed 's/^v//' | sed 's/-MC.*$//')
+          MC_VERSION=$(grep "minecraft_version" gradle.properties | cut -d'=' -f2 | tr -d ' ')
+          FAPI_VERSION=$(grep "fabric_version" gradle.properties | cut -d'=' -f2 | tr -d ' ')
+          gh workflow run add_wurst_port.yml \
+            -R Wurst-Imperium/WurstClient.net \
+            -f wurst_version="$WURST_VERSION" \
+            -f mc_version="$MC_VERSION" \
+            -f fapi_version="$FAPI_VERSION"
