--- a/gradle.properties
+++ b/gradle.properties
@@ -5,15 +5,15 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these at https://fabricmc.net/develop/ and
 # https://modrinth.com/mod/fabric-api/versions
-minecraft_version=24w46a
-yarn_mappings=24w46a+build.4
+minecraft_version=1.21.4-pre1
+yarn_mappings=1.21.4-pre1+build.1
 loader_version=0.16.9
 
 # Fabric API
-fabric_version=0.108.1+1.21.4
+fabric_version=0.109.1+1.21.4
 
 # Mod Properties
-mod_version = v7.46.2-MC24w46a
+mod_version = v7.46.2-MC1.21.4-pre1
 maven_group = net.wurstclient
 archives_base_name = Wurst-Client
 
