--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,6 +30,11 @@ on:
         required: true
         type: boolean
         default: false
+      announce_backport:
+        description: "Announce as a backport on WurstForum"
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   publish:
@@ -96,3 +101,4 @@ jobs:
             -f wurst_version="$WURST_VERSION" \
             -f mc_version="$MC_VERSION" \
             -f fapi_version="$FAPI_VERSION"
+            -f announce=${{ inputs.announce_backport }}
