Make check_translations workflow check for accidentally untranslated strings

--- a/.github/workflows/check_translations.yml
+++ b/.github/workflows/check_translations.yml
@@ -8,9 +8,11 @@ on:
       - "**"
     paths:
       - "src/main/resources/assets/wurst/translations/**.json"
+      - "src/main/resources/intentionally_untranslated.json"
   pull_request:
     paths:
       - "src/main/resources/assets/wurst/translations/**.json"
+      - "src/main/resources/intentionally_untranslated.json"
   workflow_dispatch:
 
 jobs:
