Remove extra spaces in gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@ loader_version=0.16.9
 fabric_version=0.113.0+1.21.4
 
 # Mod Properties
-mod_version = v7.46.6-MC1.21.4
-maven_group = net.wurstclient
-archives_base_name = Wurst-Client
+mod_version=v7.46.6-MC1.21.4
+maven_group=net.wurstclient
+archives_base_name=Wurst-Client
 
 # Dependencies
