--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,6 +35,9 @@ on:
         required: false
         type: boolean
         default: false
+      distinct_id:
+        description: "Automatically set by the return-dispatch action (leave blank if running manually)"
+        required: false
 
 jobs:
   publish:
@@ -43,6 +46,9 @@ jobs:
       WI_BACKUPS_API_KEY: ${{ secrets.WI_BACKUPS_API_KEY }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
+
+      - name: Echo distinct ID ${{ github.event.inputs.distinct_id }}
+        run: echo ${{ github.event.inputs.distinct_id }}
 
       - name: Checkout repository
         uses: actions/checkout@v4
