Use 'leadingSpacesToTabs' instead of 'indentWithTabs' in build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -130,7 +130,7 @@ spotless {
 	lineEndings("WINDOWS")
 	java {
 		removeUnusedImports()
-		indentWithTabs()
+		leadingSpacesToTabs()
 		trimTrailingWhitespace()
 		eclipse().configFile(file("codestyle/formatter.xml"))
 	}
