--- a/.github/workflows/auto_snapshot_update.yml
+++ b/.github/workflows/auto_snapshot_update.yml
@@ -97,23 +97,23 @@ jobs:
           git checkout -b $BRANCH_NAME
           echo "Created and checked out new branch: $BRANCH_NAME"
         fi
-      shell: bash
 
     - name: Run migrateMappings task
       run: |
         ./gradlew migrateMappings --mappings ${{ github.event.inputs.yarn_mappings }}
-      shell: bash
 
     - name: Replace src/main/java with remapped files
       run: |
         rm -rf ./src/main/java
         mv ./remappedSrc ./src/main/java
-      shell: bash
 
     - name: Update version constants
       run: |
-        python scripts/update_version_constants.py "${{ github.event.inputs.mc_version }}" "${{ github.event.inputs.yarn_mappings }}" "${{ github.event.inputs.fabric_loader }}" "${{ github.event.inputs.fapi_version }}"
-      shell: bash
+        python scripts/update_version_constants.py \
+          "${{ github.event.inputs.mc_version }}" \
+          "${{ github.event.inputs.yarn_mappings }}" \
+          "${{ github.event.inputs.fabric_loader }}" \
+          "${{ github.event.inputs.fapi_version }}"
 
     # To fix any style issues that the migration scripts might cause
     - name: Run spotlessApply task
@@ -126,7 +126,6 @@ jobs:
         git add .
         git commit -m "[Wurst-Bot] Update to ${{ github.event.inputs.mc_version }}"
         git push --set-upstream origin ${{ github.event.inputs.mc_version }}
-      shell: bash
 
     - name: Trigger CI on the new branch
       id: ci_dispatch
