--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -34,8 +34,9 @@ jobs:
           - They have bugs or conflicts that won't be resolved
         days-before-stale: 60
         days-before-close: 7
-        exempt-issue-labels: "status:never-stale"
-        exempt-pr-labels: "status:never-stale"
+        exempt-issue-labels: "status:never-stale,status:confirmed"
+        exempt-pr-labels: "status:never-stale,status:confirmed,status:merged"
+        exempt-all-milestones: true
         stale-issue-label: "status:stale"
         stale-pr-label: "status:stale"
         operations-per-run: 200
