Update to Loom 1.10

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
 }
 
 plugins {
-	id "fabric-loom" version "1.9-SNAPSHOT"
+	id "fabric-loom" version "1.10-SNAPSHOT"
 	id "com.diffplug.spotless" version "7.0.2"
 }
 
@@ -110,7 +110,7 @@ processResources {
 	inputs.property "version", project.version
 	
 	filesMatching("fabric.mod.json") {
-		expand "version": project.version
+		expand "version": inputs.properties.version
 	}
 }
 
@@ -130,8 +130,10 @@ java {
 }
 
 jar {
+	inputs.property "archivesName", project.base.archivesName
+	
 	from("LICENSE") {
-		rename {"${it}_${base.archivesName.get()}"}
+		rename {"${it}_${inputs.properties.archivesName}"}
 	}
 	
 	exclude("intentionally_untranslated.json")
@@ -139,7 +141,7 @@ jar {
 
 import com.diffplug.spotless.generic.LicenseHeaderStep
 spotless {
-	lineEndings("WINDOWS")
+	lineEndings = "WINDOWS"
 	java {
 		removeUnusedImports()
 		leadingSpacesToTabs()
