Refactor Gradle stuff

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,10 @@ fabric_version=0.118.5+1.21.4
 mod_version=v7.47.1-MC1.21.4
 maven_group=net.wurstclient
 archives_base_name=Wurst-Client
+mod_loader=Fabric
+
+# GitHub
+gh_repo_id=Wurst-Imperium/Wurst7
+mcx_repo_id=Wurst-Imperium/Wurst-MCX2
 
 # Dependencies
