Change version to 7.47.3

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ loader_version=0.16.10
 fabric_version=0.119.5+1.21.5
 
 # Mod Properties
-mod_version=v7.47.3pre1-MC1.21.5
+mod_version=v7.47.3-MC1.21.5
 maven_group=net.wurstclient
 archives_base_name=Wurst-Client
 mod_loader=Fabric
