--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,10 @@ org.gradle.parallel=true
 minecraft_version=1.21.5
 yarn_mappings=1.21.5+build.1
 loader_version=0.16.14
+loom_version=1.10-SNAPSHOT
 
 # Fabric API
-fabric_version=0.124.2+1.21.5
+fabric_version=0.127.1+1.21.5
 
 # Mod Properties
 mod_version=v7.48.2-MC1.21.5
