Change version to 7.50pre1

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ loom_version=1.11-SNAPSHOT
 fabric_version=0.128.2+1.21.7
 
 # Mod Properties
-mod_version=v7.49-MC1.21.7
+mod_version=v7.50pre1-MC1.21.7
 maven_group=net.wurstclient
 archives_base_name=Wurst-Client
 mod_loader=Fabric
