--- a/.github/workflows/auto_snapshot_update.yml
+++ b/.github/workflows/auto_snapshot_update.yml
@@ -107,7 +107,7 @@ jobs:
         git config --global user.email "contact.wurstimperium@gmail.com"
         git add .
         git commit -m "[Wurst-Bot] Update to ${{ github.event.inputs.mc_version }}"
-        git push --set-upstream origin ${{ github.event.inputs.mc_version }}
+        git push
 
     - name: Trigger CI
       id: ci_dispatch
@@ -116,7 +116,7 @@ jobs:
         token: ${{ github.token }}
         owner: Wurst-Imperium
         repo: Wurst7
-        ref: ${{ github.event.inputs.mc_version }}
+        ref: ${{ github.ref }}
         workflow: gradle.yml
 
     - name: Wait for CI to finish (run ${{ steps.ci_dispatch.outputs.run_id }})
