--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ loom_version=1.11-SNAPSHOT
 fabric_version=0.131.0+1.21.8
 
 # Mod Properties
-mod_version=v7.50-MC1.21.8
+mod_version=v7.51pre1-MC1.21.8
 maven_group=net.wurstclient
 archives_base_name=Wurst-Client
 mod_loader=Fabric
