New Feature: ChatGptResponder

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	mavenCentral()
+
 }
 
 // Override vulnerable dependencies until Minecraft updates to newer versions
@@ -59,6 +61,10 @@ dependencies {
 	// In other words, Wurst won't compile without this library,
 	// even though it's Minecraft that actually uses it.
 	modImplementation "com.google.code.findbugs:jsr305:3.0.2"
+
+	// HTTP + JSON
+	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+	implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 loom {
