Update to Gradle 9.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
+org.gradle.configuration-cache=true
 
 # Fabric Properties
 # check these at https://fabricmc.net/develop/ and
