--- a/build.gradle
+++ b/build.gradle
@@ -59,8 +59,8 @@ dependencies {
 	// In other words, Wurst won't compile without this library,
 	// even though it's Minecraft that actually uses it.
 	modImplementation "com.google.code.findbugs:jsr305:3.0.2"
-}
-
+	}
+	
 loom {
 	accessWidenerPath = file("src/main/resources/wurst.accesswidener")
 }
@@ -111,10 +111,11 @@ tasks.register('runEndToEndTest', JavaExec) {
 }
 
 processResources {
-	inputs.property "version", project.version.substring(1)
+	def modVersion = project.version.substring(1)
+	inputs.property("version", modVersion)
 	
 	filesMatching("fabric.mod.json") {
-		expand "version": inputs.properties.version
+		expand(version: modVersion)
 	}
 }
 
